# renderme

./: .gitignore  CMakeLists.txt  README.md
config/: app.json  box.json  cornell-box.json  cube.json  stairscase.json  veach-mis.json
doc/: CMakeLists-modify.md  ZBuffer.md  path-tracing.md  problems.md
lib/glfw-3.3.8/: CMakeLists.txt
lib/hah/: CMakeLists.txt  test.cpp
lib/hah/include/hah/: test.hpp
src/aggregates/: bvh.cpp  bvh.hpp
src/cameras/: orthographic.cpp  orthographic.hpp  perspective-camera.cpp  perspective-camera.hpp  perspective.cpp  perspective.hpp
src/config/: mini-renderer-config.h  mini-renderer-config.h.in  renderme-config.h  renderme-config.h.in
src/core/: bounds.cpp  bounds.hpp  camera.cpp  camera.hpp  config.hpp  config.hpp.in  file-system.cpp  file-system.hpp  film.cpp  film.hpp  gamma.cpp  gamma.hpp  geometry.cpp  geometry.hpp  geometry.inl  integrator.cpp  integrator.hpp  interaction.cpp  interaction.hpp  light.cpp  light.hpp  log.cpp  log.hpp  material.cpp  material.hpp  math.cpp  math.hpp  primitive.cpp  primitive.hpp  random.cpp  random.hpp  ray.cpp  ray.hpp  renderme.cpp  renderme.hpp  runtime-path.cpp  runtime-path.hpp  sampler.cpp  sampler.hpp  scene.cpp  (+18 more)
src/deprecated/: bounds.cpp  bounds.hpp  math.cpp  math.hpp  to-glm.hpp  transform.cpp  transform.hpp  transform.inl  vector.cpp  vector.hpp  vector.inl
src/glm/: glm-all.hpp  glm-hash.hpp  glm-print.hpp
src/glviewer/: glviewer.cpp  glviewer.hpp
src/integrators/: path-tracer.cpp  path-tracer.hpp  ray-caster.cpp  ray-caster.hpp  raytrace.cpp  raytrace.hpp  zbuffer.cpp  zbuffer.hpp
src/main/: main.cpp  mini-renderer.cpp  parser.cpp  parser.hpp  renderme.cpp
src/materials/: phong.cpp  phong.hpp
src/renderme/: main.cpp  parser.cpp  parser.hpp  renderme.cpp  renderme.hpp
src/samplers/: jitter.cpp  jitter.hpp  random.cpp  random.hpp  uniform.cpp  uniform.hpp
src/shaders/: normal.frag.glsl  normal.vert.glsl  phong.frag.glsl  phong.vert.glsl  temp.frag.glsl  temp.vert.glsl
src/shapes/: triangle.cpp  triangle.hpp
